# Virtanetv1

./: Cargo.toml
config/: governance_rules.yaml  segmentation_static.yaml
crates/sovereigntycore/src/: governance_guard.rs  governance_meta.rs  governanceguard.rs  governancemeta.rs  hitl_typestate.rs
qpudata/shards/polygons/: smart-city-sanctuary-v1.nanopoly.aln
src/: audit.rs  channel.rs  domain.rs  lib.rs  policy.rs  router.rs  session.rs
