[package]
name = "eco_infra_aln_router"
version = "0.1.0"
edition = "2021"

[lib]
name = "eco_infra_aln_router"
path = "src/lib.rs"

[[bin]]
name = "eco_infra_routerd"
path = "src/bin/eco_infra_routerd.rs"

[dependencies]
chrono = { version = "0.4", features = ["clock", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
uuid = { version = "1.7", features = ["v4"] }
thiserror = "1.0"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
http = "1.0"
hyper = { version = "1.3", features = ["server", "http1"] }
axum = "0.7"
anyhow = "1.0"
md5 = "0.7"
